Increase line-height to avoid cut off

--- a/source/stylesheets/_layout.css.scss
+++ b/source/stylesheets/_layout.css.scss
@@ -60,7 +60,7 @@ header h1 a {
 // Nav
 #site-nav {
   margin: 50px auto 0;
-  line-height: 24px;
+  line-height: 25px;
   overflow: hidden;
 }
 
